--- a/src/app/sharepages/footer/footer.component.html
+++ b/src/app/sharepages/footer/footer.component.html
@@ -1,1 +1,16 @@
-<p>footer works!</p>
+<div class="container-fluid footer">
+  <div class="row">
+
+    <div class="col-lg-6">
+      <p>Explore</p>
+    </div>
+
+    <div class="col-lg-4">
+      <a routerLink="home">Home</a>
+      <a routerLink="hotels">Hotels</a>
+      <a routerLink="reefs">Reefs</a>
+      <a routerLink="contact">Contact</a>
+    </div>
+
+  </div>
+</div>
