--- a/src/app/sharepages/navbar/navbar.component.html
+++ b/src/app/sharepages/navbar/navbar.component.html
@@ -1,1 +1,14 @@
-<p>navbar works!</p>
+<ul class="nav">
+  <li class="nav-item">
+    <a class="nav-link" routerLink="">Home</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" routerLink="hotels">Hotels</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" routerLink="reefs">Reefs</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" routerLink="contact">Contact</a>
+  </li>
+</ul>
