--- a/src/app/sharepages/navbar/navbar.component.html
+++ b/src/app/sharepages/navbar/navbar.component.html
@@ -1,14 +1,26 @@
-<ul class="nav">
-  <li class="nav-item">
-    <a class="nav-link" routerLink="">Home</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" routerLink="hotels">Hotels</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" routerLink="reefs">Reefs</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" routerLink="contact">Contact</a>
-  </li>
-</ul>
+
+
+<nav class="navbar navbar-expand-lg" float="">
+  <div class="container-fluid">
+      <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="" routerLinkActive="active-link">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="hotels" routerLinkActive="active-link">Hotels</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="reefs" routerLinkActive="active-link">Reefs</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="contact" routerLinkActive="active-link">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
