--- a/src/app/sharepages/footer/footer.component.html
+++ b/src/app/sharepages/footer/footer.component.html
@@ -1,16 +1,35 @@
-<div class="container-fluid footer">
+<footer class="container-fluid footer">
   <div class="row">
-
-    <div class="col-lg-6">
-      <p>Explore</p>
+      <div class="col-lg-6">
+          <h2>EXMA</h2>
+          <p>Exploring Marsa Alam</p>
+      </div>
+    <div class="col-6 col-md">
+      <h5>Features</h5>
+      <ul class="list-unstyled footer-links">
+        <li><a routerLink="home">Home</a></li>
+        <li><a href="#">Random feature</a></li>
+        <li><a href="#">Another one</a></li>
+        <li><a href="#">Last time</a></li>
+      </ul>
     </div>
-
-    <div class="col-lg-4">
-      <a routerLink="home">Home</a>
-      <a routerLink="hotels">Hotels</a>
-      <a routerLink="reefs">Reefs</a>
-      <a routerLink="contact">Contact</a>
+    <div class="col-6 col-md">
+      <h5>Resources</h5>
+      <ul class="list-unstyled footer-links">
+        <li><a href="#">Resource</a></li>
+        <li><a href="#">Resource name</a></li>
+        <li><a href="#">Another resource</a></li>
+        <li><a href="#">Final resource</a></li>
+      </ul>
     </div>
-
+    <div class="col-6 col-md">
+      <h5>About</h5>
+      <ul class="list-unstyled footer-links">
+        <li><a href="#">Team</a></li>
+        <li><a href="#">Locations</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+      </ul>
+    </div>
   </div>
-</div>
+</footer>
