--- a/src/app/sharepages/navbar/navbar.component.html
+++ b/src/app/sharepages/navbar/navbar.component.html
@@ -2,14 +2,14 @@
 
 <nav class="navbar navbar-expand-lg" float="">
   <div class="container-fluid">
-      <a class="navbar-brand" href="#">EXMA</a>
+      <a class="navbar-brand" href="#">EXMA<br><span class="navbar-brand-additional">Exploring Marsa Alam</span></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link" routerLink="" routerLinkActive="active-link">Home</a>
+          <a class="nav-link" routerLink="" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="hotels" routerLinkActive="active-link">Hotels</a>
