--- a/src/app/sharepages/footer/footer.component.html
+++ b/src/app/sharepages/footer/footer.component.html
@@ -1,35 +1,38 @@
 <footer class="container-fluid footer">
   <div class="row">
-      <div class="col-lg-6">
+      <div class="col-lg-6 footer-brand">
           <h2>EXMA</h2>
           <p>Exploring Marsa Alam</p>
       </div>
-    <div class="col-6 col-md">
-      <h5>Features</h5>
-      <ul class="list-unstyled footer-links">
-        <li><a routerLink="home">Home</a></li>
-        <li><a href="#">Random feature</a></li>
-        <li><a href="#">Another one</a></li>
-        <li><a href="#">Last time</a></li>
-      </ul>
+    <div class="col-6 col-md footer-content">
+      <h5>SITEMAP</h5>
+      <button class="footercontentClick" type="button" data-bs-toggle="collapse" data-bs-target="#footercontentClickPos1" aria-controls="footercontentClickPos1" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="footer-arrow-icon"></span>
+      </button>
+      <div class="collapse footer-collapse" id="footercontentClickPos1">
+        <ul class="list-unstyled footer-links">
+          <li><a routerLink="home">Home</a></li>
+          <li><a routerLink="hotels">Hotels</a></li>
+          <li><a routerLink="reefs">Reefs</a></li>
+          <li><a routerLink="contact">Contact</a></li>
+        </ul>
+      </div>
     </div>
-    <div class="col-6 col-md">
-      <h5>Resources</h5>
-      <ul class="list-unstyled footer-links">
-        <li><a href="#">Resource</a></li>
-        <li><a href="#">Resource name</a></li>
-        <li><a href="#">Another resource</a></li>
-        <li><a href="#">Final resource</a></li>
-      </ul>
-    </div>
-    <div class="col-6 col-md">
-      <h5>About</h5>
-      <ul class="list-unstyled footer-links">
-        <li><a href="#">Team</a></li>
-        <li><a href="#">Locations</a></li>
-        <li><a href="#">Privacy</a></li>
-        <li><a href="#">Terms</a></li>
-      </ul>
+    <div class="col-6 col-md footer-content">
+      <h5>TOPICS</h5>
+      <button class="footercontentClick" type="button" data-bs-toggle="collapse" data-bs-target="#footercontentClickPos2" aria-controls="footercontentClickPos2" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="footer-arrow-icon"></span>
+      </button>
+      <div class="collapse footer-collapse" id="footercontentClickPos2">
+        <ul class="list-unstyled footer-links">
+          <li><a href="#">Resource</a></li>
+          <li><a href="#">Resource name</a></li>
+          <li><a href="#">Another resource</a></li>
+          <li><a href="#">Final resource</a></li>
+        </ul>
+      </div>
     </div>
   </div>
+  <p class="footer-author-rights"> Michal Pajunk 2022</p>
 </footer>
+
