--- a/src/app/sharepages/footer/footer.component.html
+++ b/src/app/sharepages/footer/footer.component.html
@@ -1,35 +1,27 @@
 <footer class="container-fluid footer">
   <div class="row">
-      <div class="col-lg-6 footer-brand">
-          <h2>EXMA</h2>
-          <p>Exploring Marsa Alam</p>
-      </div>
-    <div class="col-6 col-md footer-content">
-      <h5>SITEMAP</h5>
-      <button class="footercontentClick" type="button" data-bs-toggle="collapse" data-bs-target="#footercontentClickPos1" aria-controls="footercontentClickPos1" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="footer-arrow-icon"></span>
-      </button>
-      <div class="collapse footer-collapse" id="footercontentClickPos1">
-        <ul class="list-unstyled footer-links">
-          <li><a routerLink="home">Home</a></li>
-          <li><a routerLink="hotels">Hotels</a></li>
-          <li><a routerLink="reefs">Reefs</a></li>
-          <li><a routerLink="contact">Contact</a></li>
-        </ul>
-      </div>
+    <div class="col-lg-6 footer-brand">
+        <h2>EXMA</h2>
+        <p>Exploring Marsa Alam</p>
     </div>
-    <div class="col-6 col-md footer-content">
-      <h5>TOPICS</h5>
-      <button class="footercontentClick" type="button" data-bs-toggle="collapse" data-bs-target="#footercontentClickPos2" aria-controls="footercontentClickPos2" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="footer-arrow-icon"></span>
-      </button>
-      <div class="collapse footer-collapse" id="footercontentClickPos2">
-        <ul class="list-unstyled footer-links">
-          <li><a href="#">Resource</a></li>
-          <li><a href="#">Resource name</a></li>
-          <li><a href="#">Another resource</a></li>
-          <li><a href="#">Final resource</a></li>
-        </ul>
+    <div class="footer-column">
+      <div class="col-6 col-md footer-content">
+          <span class="column-header">SITEMAP</span>
+          <ul class="list-unstyled footer-links">
+            <li><a routerLink="home">Home</a></li>
+            <li><a routerLink="hotels">Hotels</a></li>
+            <li><a routerLink="reefs">Reefs</a></li>
+            <li><a routerLink="contact">Contact</a></li>
+          </ul>
+      </div>
+      <div class="col-6 col-md footer-content">
+          <span class="column-header">TOPICS</span>
+          <ul class="list-unstyled footer-links">
+            <li><a href="#">Resource</a></li>
+            <li><a href="#">Resource name</a></li>
+            <li><a href="#">Another resource</a></li>
+            <li><a href="#">Final resource</a></li>
+          </ul>
       </div>
     </div>
   </div>
