--- a/src/app/sharepages/navbar/navbar.component.css
+++ b/src/app/sharepages/navbar/navbar.component.css
@@ -56,7 +56,115 @@
 
 
 @media screen and (min-width:600px) {
+
+
+  .navbar {
+    box-shadow: 0 0 6px 3px #0000001a;
+    border-radius: 0 0 20px 20px;
+  }
+
+  .navbar-brand {
+    margin: 30px 0px 0px 10px;
+    font-weight: 700;
+    height: 80px;
+    font-size: 40px;
+    line-height: 20px;
+  }
+
+  .navbar-brand-additional {
+    font-size: 13px;
+  }
+
+
+  .nav-link {
+    padding: 20px;
+    margin: 3px 12px;
+    color: black;
+  }
+  .active-link {
+    padding: 20px;
+    margin: 3px 12px;
+    color: white;
+    background: black;
+    border-radius:10px;
+  }
+
+  .navbar-collapse {
+    padding: 10px 0px;
+    border-radius:20px;
+    background: #F1F1F1;
+  }
+
+  .navbar-toggler {
+    font-size: 30px;
+    border: solid 0;
+    background: #F1F1F1;
+    padding: 10px;
+    border-radius: 20px;
+  }
+  .navbar-toggler-icon {
+    background-image: url(/assets/svg_files/list.svg);
+  }
+
+
 }
 
-@media screen and (min-width:1024px) {
+@media screen and (min-width:992px) {
+
+
+  .navbar {
+    box-shadow: 0 0 6px 3px #0000001a;
+    border-radius: 0 0 20px 20px;
+  }
+
+  .navbar-nav {
+    padding: 5px;
+    border-radius: 20px;
+    background: #F1F1F1;
+  }
+
+  .navbar-brand {
+    margin: 30px 0px 0px 10px;
+    font-weight: 700;
+    height: 80px;
+    font-size: 40px;
+    line-height: 20px;
+  }
+
+  .navbar-brand-additional {
+    font-size: 13px;
+  }
+
+
+  .nav-link {
+    padding: 20px;
+    margin: 3px 12px;
+    color: black;
+  }
+  .active-link {
+    padding: 20px;
+    margin: 3px 12px;
+    color: white;
+    background: black;
+    border-radius:10px;
+  }
+
+  .navbar-collapse {
+    padding: 10px 0px;
+    border-radius:20px;
+    background: unset;
+  }
+
+  .navbar-toggler {
+    font-size: 30px;
+    border: solid 0;
+    background: #F1F1F1;
+    padding: 10px;
+    border-radius: 20px;
+  }
+  .navbar-toggler-icon {
+    background-image: url(/assets/svg_files/list.svg);
+  }
+
+
 }
