--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<div id="main">
+
 <!-- navbar -->
 <app-navbar></app-navbar>
 
@@ -6,3 +8,5 @@
 
 <!-- footer -->
 <app-footer></app-footer>
+
+</div>
