--- a/src/app/sharepages/navbar/navbar.component.css
+++ b/src/app/sharepages/navbar/navbar.component.css
@@ -3,6 +3,7 @@
 @media screen and (max-width:599px) {
 
   .navbar {
+    background: white;
     box-shadow: 0 0 6px 3px #0000001a;
     border-radius: 0 0 20px 20px;
   }
@@ -59,6 +60,7 @@
 
 
   .navbar {
+    background: white;
     box-shadow: 0 0 6px 3px #0000001a;
     border-radius: 0 0 20px 20px;
   }
@@ -113,6 +115,7 @@
 
 
   .navbar {
+    background: white;
     box-shadow: 0 0 6px 3px #0000001a;
     border-radius: 0 0 20px 20px;
   }
