--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,31 @@
-<p>home works!</p>
+
+<div id="main-static-slider">
+
+    <a href="" id="seasonal-slide">
+        <img src=""  alt="">
+        <div id="slider_header_holder">
+            <h10></h10>
+            <p></p>
+            <button></button>
+        </div>
+    </a>
+
+    <a href="" class="sport-slide">
+        <img src="" alt="">
+        <button></button>
+    </a>
+    <a href="" class="sport-slide">
+        <img src=""  alt="">
+        <button></button>
+    </a>
+    <a href="" class="sport-slide">
+        <img src=""  alt="">
+        <button></button>
+    </a>
+    
+    <a href="" class="sport-slide">
+        <img src=""  alt="">
+        <button></button>
+    </a>
+
+</div>
