change in index.html

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,7 +4,7 @@
     <a href="" id="seasonal-slide">
         <img src=""  alt="">
         <div id="slider_header_holder">
-            <h10></h10>
+            <span></span>
             <p></p>
             <button></button>
         </div>
@@ -22,7 +22,7 @@
         <img src=""  alt="">
         <button></button>
     </a>
-    
+
     <a href="" class="sport-slide">
         <img src=""  alt="">
         <button></button>
