update header menu

--- a/src/app/sharepages/navbar/navbar.component.css
+++ b/src/app/sharepages/navbar/navbar.component.css
@@ -5,14 +5,30 @@
   .navbar {
     background: white;
     box-shadow: 0 0 6px 3px #0000001a;
-    border-radius: 0 0 20px 20px;
+    /*border-radius: 0 0 10px 10px; */
+
+    /* update 11.7. */
+    border-radius: 0;
   }
 
+  /* added 11.7. */
+  .navbar ul {
+    padding: 10px 0 10px 0;
+    background: #f1f1f1;
+    border-radius: 20px;
+  }
+
+  .ms-auto {
+    margin: 10px!important;
+  }
+  /* end 11.7. */
+
+
   .navbar-brand {
-    margin: 30px 0px 0px 10px;
+    margin: 0px 0px 0px 10px;
     font-weight: 700;
-    height: 80px;
-    font-size: 40px;
+    height: 50px;
+    font-size: 36px;
     line-height: 20px;
   }
 
@@ -35,17 +51,31 @@
   }
 
   .navbar-collapse {
-    padding: 10px 0px;
-    border-radius:20px;
-    background: #F1F1F1;
+    /* old version */
+    /* padding: 10px 0px;
+      border-radius:20px;
+      background: #F1F1F1;*/
+
+    /* update 11.7. */
+    position: absolute;
+    top: 70px;
+    right: 0;
+    width: 100%;
+    z-index: 999;
+    padding: 0;
+    border-radius: 0 0 10px 10px;
+    background: #fff;
+    flex-basis: unset!important;
+    flex-grow: unset!important;
+    align-items: unset!important;
   }
 
   .navbar-toggler {
-    font-size: 30px;
+    font-size: 24px;
     border: solid 0;
     background: #F1F1F1;
-    padding: 10px;
-    border-radius: 20px;
+    padding: 5px;
+    border-radius: 10px;
   }
   .navbar-toggler-icon {
     background-image: url(/assets/svg_files/list.svg);
@@ -62,14 +92,30 @@
   .navbar {
     background: white;
     box-shadow: 0 0 6px 3px #0000001a;
-    border-radius: 0 0 20px 20px;
+    /*border-radius: 0 0 20px 20px; */
+
+    /* update 11.7. */
+    border-radius: 0;
   }
 
+  /* added 11.7. */
+  .navbar ul {
+    padding: 10px 0 10px 0;
+    background: #f1f1f1;
+    border-radius: 20px;
+  }
+
+  .ms-auto {
+    margin: 10px!important;
+  }
+  /* end 11.7. */
+
+
   .navbar-brand {
-    margin: 30px 0px 0px 10px;
+    margin: 0px 0px 0px 10px;
     font-weight: 700;
-    height: 80px;
-    font-size: 40px;
+    height: 50px;
+    font-size: 36px;
     line-height: 20px;
   }
 
@@ -92,17 +138,31 @@
   }
 
   .navbar-collapse {
-    padding: 10px 0px;
+    /* old version */
+     /*padding: 10px 0px;
     border-radius:20px;
-    background: #F1F1F1;
+    background: #F1F1F1;*/
+
+    /* update 11.7. */
+    position: absolute;
+    top: 70px;
+    right: 0;
+    width: 100%;
+    z-index: 999;
+    padding: 0;
+    border-radius: 0 0 10px 10px;
+    background: #fff;
+    flex-basis: unset!important;
+    flex-grow: unset!important;
+    align-items: unset!important;
   }
 
   .navbar-toggler {
-    font-size: 30px;
+    font-size: 24px;
     border: solid 0;
     background: #F1F1F1;
-    padding: 10px;
-    border-radius: 20px;
+    padding: 5px;
+    border-radius: 10px;
   }
   .navbar-toggler-icon {
     background-image: url(/assets/svg_files/list.svg);
@@ -117,20 +177,30 @@
   .navbar {
     background: white;
     box-shadow: 0 0 6px 3px #0000001a;
-    border-radius: 0 0 20px 20px;
+    /*border-radius: 0 0 20px 20px; */
+
+    /* update 11.7. */
+    border-radius: 0;
   }
 
-  .navbar-nav {
-    padding: 5px;
+  /* added 11.7. */
+  .navbar ul {
+    padding: 10px 0 10px 0;
+    background: #f1f1f1;
     border-radius: 20px;
-    background: #F1F1F1;
   }
+
+  .ms-auto {
+    margin: 10px!important;
+  }
+  /* end 11.7. */
+
 
   .navbar-brand {
-    margin: 30px 0px 0px 10px;
+    margin: 0px 0px 0px 10px;
     font-weight: 700;
-    height: 80px;
-    font-size: 40px;
+    height: 50px;
+    font-size: 36px;
     line-height: 20px;
   }
 
@@ -153,17 +223,31 @@
   }
 
   .navbar-collapse {
-    padding: 10px 0px;
+    /* old version */
+     /*padding: 10px 0px;
     border-radius:20px;
+    background: #F1F1F1;*/
+
+    /* update 11.7. */
+    position: unset;
+    top: unset;
+    right: unset;
+    width: unset;
+    z-index: 999;
+    padding: unset;
+    border-radius: unset;
     background: unset;
+    flex-basis: unset!important;
+    flex-grow: unset!important;
+    align-items: unset!important;
   }
 
   .navbar-toggler {
-    font-size: 30px;
+    font-size: 24px;
     border: solid 0;
     background: #F1F1F1;
-    padding: 10px;
-    border-radius: 20px;
+    padding: 5px;
+    border-radius: 10px;
   }
   .navbar-toggler-icon {
     background-image: url(/assets/svg_files/list.svg);
