--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,7 +5,7 @@
         <img src=""  alt="">
         <div id="slider_header_holder">
             <span></span>
-            <p></p>
+            <p>{{hotelData[0].hotelName}}</p>
             <button></button>
         </div>
     </a>
@@ -29,3 +29,4 @@
     </a>
 
 </div>
+
