--- a/src/app/sharepages/footer/footer.component.html
+++ b/src/app/sharepages/footer/footer.component.html
@@ -1,12 +1,18 @@
 <footer class="container-fluid footer">
   <div class="row">
-    <div class="col-lg-6 footer-brand">
+
+
+    <div class="footer-column">
+      <div class="footer-brand">
         <h2>EXMA</h2>
         <p>Exploring Marsa Alam</p>
-    </div>
-    <div class="footer-column">
-      <div class="col-6 col-md footer-content">
+      </div>
+
+
+      <div class="footer-content">
+        <div style="position:relative;">
           <span class="column-header">SITEMAP</span>
+        </div>
           <ul class="list-unstyled footer-links">
             <li><a routerLink="home">Home</a></li>
             <li><a routerLink="hotels">Hotels</a></li>
@@ -14,8 +20,11 @@
             <li><a routerLink="contact">Contact</a></li>
           </ul>
       </div>
-      <div class="col-6 col-md footer-content">
-          <span class="column-header">TOPICS</span>
+
+      <div class="footer-content">
+      <div style="position:relative;">
+        <span class="column-header">TOPICS</span>
+      </div>
           <ul class="list-unstyled footer-links">
             <li><a href="#">Resource</a></li>
             <li><a href="#">Resource name</a></li>
@@ -23,6 +32,16 @@
             <li><a href="#">Final resource</a></li>
           </ul>
       </div>
+
     </div>
+
+    <div class="footer-bottom-container">
+      <div class="break-line"></div>
+
+    <div class="footer-bottom">
+      <span>Copyrights</span>
+      <p>Michal Pajunk</p>
+    </div>
+  </div>
   </div>
 </footer>
