--- a/src/app/sharepages/footer/footer.component.css
+++ b/src/app/sharepages/footer/footer.component.css
@@ -10,7 +10,7 @@
   }
 
   .footer-brand {
-    margin: 30px 0 0 10px;
+    margin-top: 30px;
   }
   .footer-brand h2 {
     font-weight: 700;
@@ -23,45 +23,61 @@
   }
 
   .footer-content {
-    margin: 30px 0 0 10px;
-    color: white;
-    display: flex;
-    align-items: flex-start;
-    flex-direction: column;
+        color: white;
+    flex-direction: row;
+    flex-wrap: nowrap;
   }
 
   .column-header {
     font-weight: 700;
     margin: 0;
     color:white;
-    font-size: 24px;
+    font-size: 16px;
   }
+  .column-header::after {
+    left: 0;
+    bottom: 0;
+    content: "";
+    width: 60%;
+    height: 1px;
+    position: absolute;
+    background: white;
+}
 
   .footer-content a {
     text-decoration: none;
     color: white;
-  }
-
-  .footercontentClick{
-    border:solid 0;
-    background: black;
-  }
-
-  .footer-arrow-icon{
-    background-image: url("/assets/svg_files/caret-down.svg");
-    display: inline-block;
-    width: 1.5em;
-    height: 1.5em;
-    vertical-align: middle;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 100%;
-    filter: invert(92%) sepia(100%) saturate(0%) hue-rotate(274deg) brightness(108%) contrast(103%);
+    font-size: 16px;
   }
 
   .footer-column{
+
+    margin-left:10px;
     display: flex;
+    flex-direction: column;
+    align-items: flex-start;
   }
+
+  .footer-bottom span {
+    font-weight: 700;
+  }
+
+  .footer-bottom {
+    color: black;
+    text-align: center;
+    position: relative;
+    margin-left: 10px;
+  }
+
+  .break-line {
+    margin: 10px 0px;
+    height: 1px;
+    background: rgb(0, 0, 0);
+  }
+  .footer-bottom-container {
+    background: white;
+  }
+
 }
 /* ---------------------------------------------------------- */
 /* END Mobile CSS */
@@ -78,57 +94,78 @@
     border-radius: 20px 20px 0 0;
   }
 
+  .footer-links{
+    line-height: 2;
+    font-size: 16px;
+  }
+
   .footer-brand {
-    margin: 30px 0 0 10px;
+    width: 50%;
+    margin: 40px 0 0 10px;
   }
   .footer-brand h2 {
     font-weight: 700;
-    font-size: 24px;
+    font-size: 32px;
+    line-height: 16px;
   }
 
   .footer-brand p {
-    font-size: 13px;
+    font-size: 12px;
   }
 
   .footer-content {
+    width: 25%;
     margin: 30px 0 0 10px;
     color: white;
-    display: flex;
-    align-items: flex-start;
-    flex-direction: column;
   }
 
   .column-header {
+    line-height: 2;
     font-weight: 700;
     margin: 0;
     color:white;
-    font-size: 24px;
+    font-size: 16px;
   }
+
+  .column-header::after {
+    left: 0;
+    bottom: 0;
+    content: "";
+    width: 60%;
+    height: 1px;
+    position: absolute;
+    background: white;
+}
+
 
   .footer-content a {
     text-decoration: none;
     color: white;
   }
 
-  .footercontentClick{
-    border:solid 0;
-    background: black;
-  }
-
-  .footer-arrow-icon{
-    background-image: url("/assets/svg_files/caret-down.svg");
-    display: inline-block;
-    width: 1.5em;
-    height: 1.5em;
-    vertical-align: middle;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 100%;
-    filter: invert(92%) sepia(100%) saturate(0%) hue-rotate(274deg) brightness(108%) contrast(103%);
-  }
-
   .footer-column{
     display: flex;
+  }
+
+  .footer-bottom span {
+    font-weight: 700;
+  }
+
+  .footer-bottom {
+    color: black;
+    text-align: center;
+    position: relative;
+    margin-left: 10px;
+  }
+
+  .break-line {
+    margin: 10px 0px;
+    height: 1px;
+    background: rgb(0, 0, 0);
+  }
+  .footer-bottom-container {
+    margin-top: 60px;
+    background: white;
   }
 
 }
