--- a/src/app/sharepages/footer/footer.component.css
+++ b/src/app/sharepages/footer/footer.component.css
@@ -100,7 +100,7 @@
   }
 
   .footer-brand {
-    width: 50%;
+    width: 55%;
     margin: 40px 0 0 10px;
   }
   .footer-brand h2 {
@@ -114,7 +114,7 @@
   }
 
   .footer-content {
-    width: 25%;
+    width: 20%;
     margin: 30px 0 0 10px;
     color: white;
   }
@@ -145,6 +145,8 @@
 
   .footer-column{
     display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
   }
 
   .footer-bottom span {
@@ -177,6 +179,11 @@
 /* BEGIN Desktop CSS */
 /* ---------------------------------------------------------- */
 @media screen and (min-width:992px) {
+
+  .footer-brand {
+    width: 53%;
+    margin: 40px 0 0 10px;
+  }
 }
 /* ---------------------------------------------------------- */
 /* END Mobile CSS */
