added hotel and updated homepage

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,32 +1,27 @@
 
 <div id="main-static-slider">
 
-    <a href="" id="seasonal-slide">
-        <img src=""  alt="">
+    <a href="" id="big_homebanner-slide">
+        <img src="{{hotelData[0].hotelImg}}"  alt="">
         <div id="slider_header_holder">
-            <span></span>
             <p>{{hotelData[0].hotelName}}</p>
-            <button></button>
+            <button>Objavte viac</button>
         </div>
     </a>
 
-    <a href="" class="sport-slide">
-        <img src="" alt="">
-        <button></button>
+    <a href="" class="homebanner-slide">
+        <img src="{{hotelData[0].hotelImg}}" alt="">
+        <p>{{hotelData[0].hotelName}}</p>
     </a>
-    <a href="" class="sport-slide">
-        <img src=""  alt="">
-        <button></button>
+    <a href="" class="homebanner-slide">
+        <img src="{{hotelData[0].hotelImg}}"  alt="">
+        <p>{{hotelData[0].hotelName}}</p>
     </a>
-    <a href="" class="sport-slide">
-        <img src=""  alt="">
-        <button></button>
+    <a href="" class="homebanner-slide">
+        <img src="{{hotelData[0].hotelImg}}"  alt="">
+        <p>{{hotelData[0].hotelName}}</p>
     </a>
 
-    <a href="" class="sport-slide">
-        <img src=""  alt="">
-        <button></button>
-    </a>
 
 </div>
 
