--- a/src/app/sharepages/footer/footer.component.html
+++ b/src/app/sharepages/footer/footer.component.html
@@ -11,13 +11,13 @@
 
       <div class="footer-content">
         <div style="position:relative;">
-          <span class="column-header">SITEMAP</span>
+          <span class="column-header">NAVIGÁCIA</span>
         </div>
           <ul class="list-unstyled footer-links">
-            <li><a routerLink="home">Home</a></li>
-            <li><a routerLink="hotels">Hotels</a></li>
-            <li><a routerLink="reefs">Reefs</a></li>
-            <li><a routerLink="contact">Contact</a></li>
+            <li><a routerLink="home">Domov</a></li>
+            <li><a routerLink="hotels">Hotely</a></li>
+            <li><a routerLink="reefs">Pláže</a></li>
+            <li><a routerLink="contact">Kontakt</a></li>
           </ul>
       </div>
 
