--- a/src/app/sharepages/navbar/navbar.component.html
+++ b/src/app/sharepages/navbar/navbar.component.html
@@ -9,16 +9,16 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link" routerLink="" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}">Home</a>
+          <a class="nav-link" routerLink="" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}">Domov</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="hotels" routerLinkActive="active-link">Hotels</a>
+          <a class="nav-link" routerLink="hotels" routerLinkActive="active-link">Hotely</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="reefs" routerLinkActive="active-link">Reefs</a>
+          <a class="nav-link" routerLink="reefs" routerLinkActive="active-link">Pláže</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="contact" routerLinkActive="active-link">Contact</a>
+          <a class="nav-link" routerLink="contact" routerLinkActive="active-link">Kontakt</a>
         </li>
       </ul>
     </div>
