--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,83 +1,49 @@
+/* BEGIN Mobile CSS */
+/* ---------------------------------------------------------- */
+@media screen and (max-width:599px) {
 
-.slider{
-	display: block;
-	width: 100%;
-	min-height: 130px;	
-	border-radius: 20px;
-	overflow: hidden;
-	background-position: center center;
-  	background-repeat: no-repeat;
-  	background-size: cover;
-}
-
-#slider-left, #slider-right{
-	position: absolute;
-	z-index: 10;
-	top: 50%;	
-	font-weight: 900;
-	color:rgba(0,0,0,0.7);
-	background-color: rgba(255,255 ,255 ,0.4);
-	border-radius: 100px;
-	text-align: center;
-	cursor: pointer;
-	box-shadow: 0 0 8px 0px rgba(60, 60, 60, 0.5);
-	user-select:none;
-	-moz-user-select:none;
-	-webkit-user-select:none;
-	-webkit-touch-callout:none;
-}
-
-#slider-left{
-	left: 10px;
-	right: auto;
-}
-#slider-right{
-	right: 10px ;
-	left: auto;
-
-}
-/*STATIC SLIDER*/
 
 #main-static-slider{
 	width: 100%;
 	padding: 1%;
-	padding:10px max(10px,2vw);	
+	padding:10px max(10px,2vw);
 	display: grid;
 	justify-content: space-around;
-	grid-template-areas: 'a a' 'b c' 'd e';
+	grid-template-areas: 'a a' 'b b' 'c c' 'd d';
 	grid-template-columns: 1fr 1fr;
-	grid-gap: 10px;	
+	grid-gap: 10px;
 }
 #main-static-slider a{
 	position: relative;
-	display: block;		
+	display: block;
 	overflow: hidden;
 	border-radius: 25px;
 	padding: 0;
 	margin: 0;
 }
 
-#seasonal-slide img, .sport-slide img{
+#big_homebanner-slide img, .homebanner-slide img{
 	position: relative;
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
 	border-radius: 25px;
-	
+
 }
-.sport-slide::before{
+
+.homebanner-slide::before{
 	content: "";
 	width: 100%;
-	height: 100%;	
+	height: 100%;
 	background: linear-gradient(to bottom, transparent 70%, rgba(0, 0, 0, 0.5));
 	position: absolute;
 	display: block;
 	left: 0;
 	top: 0;
 	z-index: 10;
-} 
+}
 
-#seasonal-slide{
+#big_homebanner-slide{
 position: relative;
 text-align: center;
 width: 100%;
@@ -85,14 +51,36 @@ width: 100%;
 
 }
 
-#seasonal-slide img{
+#big_homebanner-slide img{
 	height:100vw;
 	max-height: 400px;
 	object-fit: cover;
 	position: relative;
 	display: block;
-	
-	
+
+
+}
+.homebanner-slide img {
+	height:40vw;
+	max-height: 200px;
+	object-fit: cover;
+	position: relative;
+	display: block;
+
+
+}
+.homebanner-slide p {
+  text-shadow: 3px 2px 4px black;
+  text-decoration: none;
+  text-transform: uppercase;
+  display: block;
+    position: absolute;
+    z-index: 10;
+    bottom: 0;
+    font-weight: 700;
+    color: white;
+    left: 10%;
+
 }
 
 #slider_header_holder{
@@ -100,11 +88,11 @@ width: 100%;
 	position: absolute;
 	display: flex;
 	flex-direction: column;
-	justify-content: flex-end;	
+	justify-content: flex-end;
 	width: 100%;
 	height: 100%;
 	left: 0;
-	bottom: 0;	
+	bottom: 0;
 	border-radius: 20px;
 	padding: 30px 20px;
 	text-align: left;
@@ -112,7 +100,7 @@ width: 100%;
 #slider_header_holder::before{
 	content: "";
 	width: 100%;
-	height: 100%;	
+	height: 100%;
 	background: linear-gradient(to left, transparent 50%, rgba(0, 0, 0, 0.6));
 	position: absolute;
 	display: block;
@@ -120,10 +108,10 @@ width: 100%;
 	top: 0;
 	z-index: 10;
 }
-#slider_header_holder h10{		
-	color: white;	
-	text-transform: uppercase;	
-	font-weight: 700;	
+#slider_header_holder h10{
+	color: white;
+	text-transform: uppercase;
+	font-weight: 700;
 	font-size: 15px;
 	font-size: min(4.5vw,20px);
 	text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.46);
@@ -132,12 +120,12 @@ width: 100%;
 	width: fit-content;
 	border-radius: 15px;
 	z-index: 20;
-	
-	
+
+
 }
 #slider_header_holder p{
-	color: white;	
-	text-transform: uppercase;	
+	color: white;
+	text-transform: uppercase;
 	font-weight: 700;
 	letter-spacing: 0.025em;
 	font-size: 25px;
@@ -146,18 +134,18 @@ width: 100%;
 	padding: 10px 0;
 	width: 50%;
 	z-index: 20;
-	
+
 }
-#slider_header_holder button{	
+#slider_header_holder button{
 	font-size: 14px;
 	font-size: min(17px,4.2vw);
 	font-family:'Roboto Condensed', sans-serif;
 	font-weight: bold;
-	text-transform: uppercase;	
+	text-transform: uppercase;
 	background: linear-gradient(270deg, #FFE24B 0%, #FFC700 100%);;
 	border-radius: 15px;
 	color: black;
-	width: fit-content;	
+	width: fit-content;
 	padding:10px;
 	z-index: 20;
 	margin-top: 10px;
@@ -174,19 +162,16 @@ width: 100%;
 #main-static-slider a:nth-child(4){
 	grid-area: d;
 }
-#main-static-slider a:nth-child(5){
-	grid-area: e;
-}
 
 
 
-.sport-slide button{
+.homebanner-slide button{
 	font-size: 14px;
 	font-size: min(17px,4vw);
 	font-family:'Roboto Condensed', sans-serif;
 	font-weight: bold;
 	text-transform: uppercase;
-	position: absolute;	
+	position: absolute;
 	text-shadow: 0 0 5px rgba(0, 0, 0, 0.568);
 	padding: 10px ;
 	background-color:rgba(255, 255, 255, 0.295);
@@ -199,3 +184,26 @@ width: 100%;
 	z-index: 20;
 	backdrop-filter: blur(4px);
 }
+
+
+}
+/* ---------------------------------------------------------- */
+/* END Mobile CSS */
+
+
+/* BEGIN Tablet CSS */
+/* ---------------------------------------------------------- */
+@media screen and (min-width:600px) {
+
+}
+/* ---------------------------------------------------------- */
+/* END Mobile CSS */
+
+
+
+/* BEGIN Desktop CSS */
+/* ---------------------------------------------------------- */
+@media screen and (min-width:992px) {
+}
+/* ---------------------------------------------------------- */
+/* END Mobile CSS */
