--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -10,16 +10,21 @@
     </a>
 
     <a href="" class="homebanner-slide">
-        <img src="{{hotelData[0].hotelImg}}" alt="">
-        <p>{{hotelData[0].hotelName}}</p>
+        <img src="{{hotelData[1].hotelImg}}" alt="">
+        <p class="homebanner-name">{{hotelData[1].hotelName}}</p>
+        <p class="homebanner-desc">{{hotelData[1].hotelDescription}}</p>
     </a>
+
     <a href="" class="homebanner-slide">
-        <img src="{{hotelData[0].hotelImg}}"  alt="">
-        <p>{{hotelData[0].hotelName}}</p>
+        <img src="{{hotelData[2].hotelImg}}"  alt="">
+        <p class="homebanner-name">{{hotelData[2].hotelName}}</p>
+        <p class="homebanner-desc">{{hotelData[2].hotelDescription}}</p>
     </a>
+
     <a href="" class="homebanner-slide">
-        <img src="{{hotelData[0].hotelImg}}"  alt="">
-        <p>{{hotelData[0].hotelName}}</p>
+        <img src="{{hotelData[3].hotelImg}}"  alt="">
+        <p class="homebanner-name">{{hotelData[3].hotelName}}</p>
+        <p class="homebanner-desc">{{hotelData[3].hotelDescription}}</p>
     </a>
 
 
