--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -17,7 +17,7 @@
 	position: relative;
 	display: block;
 	overflow: hidden;
-	border-radius: 25px;
+	border-radius: 10px;
 	padding: 0;
 	margin: 0;
 }
@@ -27,7 +27,7 @@
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
-	border-radius: 25px;
+	border-radius: 10px;
 
 }
 
@@ -35,7 +35,7 @@
 	content: "";
 	width: 100%;
 	height: 100%;
-	background: linear-gradient(to bottom, transparent 70%, rgba(0, 0, 0, 0.5));
+	background: linear-gradient(to bottom, transparent 40%, rgb(0 0 0 / 80%));
 	position: absolute;
 	display: block;
 	left: 0;
@@ -69,22 +69,40 @@ width: 100%;
 
 
 }
-.homebanner-slide p {
+.homebanner-name {
   text-shadow: 3px 2px 4px black;
-  text-decoration: none;
-  text-transform: uppercase;
-  display: block;
+    text-decoration: none;
+    text-transform: uppercase;
+    display: block;
     position: absolute;
     z-index: 10;
-    bottom: 0;
+    bottom: 10%;
     font-weight: 700;
+    font-size: 24px;
     color: white;
-    left: 10%;
+    left: 5%;
 
 }
 
+.homebanner-desc {
+  width: fit-content;
+    max-width: 300px;
+    text-decoration: none;
+    text-transform: uppercase;
+    display: block;
+    position: absolute;
+    z-index: 10;
+    bottom: 0;
+    font-style: italic;
+    font-size: 14px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    color: white;
+    left: 5%;
+}
+
 #slider_header_holder{
-	font-family:'Roboto Condensed', sans-serif;
 	position: absolute;
 	display: flex;
 	flex-direction: column;
@@ -137,18 +155,20 @@ width: 100%;
 
 }
 #slider_header_holder button{
-	font-size: 14px;
-	font-size: min(17px,4.2vw);
-	font-family:'Roboto Condensed', sans-serif;
-	font-weight: bold;
-	text-transform: uppercase;
-	background: linear-gradient(270deg, #FFE24B 0%, #FFC700 100%);;
-	border-radius: 15px;
-	color: black;
-	width: fit-content;
-	padding:10px;
-	z-index: 20;
-	margin-top: 10px;
+	border: 0;
+    font-size: 14px;
+    font-size: min(17px,4.2vw);
+    font-weight: bold;
+    text-transform: uppercase;
+    background: #ffffff8a;
+    border-radius: 15px;
+    color: white;
+    width: -moz-fit-content;
+    width: fit-content;
+    padding: 10px;
+    z-index: 20;
+    margin-top: 10px;
+    text-shadow: 0 0 7px black;
 }
 #main-static-slider a:first-child{
 	grid-area: a;
@@ -168,7 +188,6 @@ width: 100%;
 .homebanner-slide button{
 	font-size: 14px;
 	font-size: min(17px,4vw);
-	font-family:'Roboto Condensed', sans-serif;
 	font-weight: bold;
 	text-transform: uppercase;
 	position: absolute;
