--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,7 +9,7 @@
         </div>
     </a>
 
-    <a href="" class="homebanner-slide">
+    <a href="" id="big_homebanner-lowres"class="homebanner-slide">
         <img src="{{hotelData[1].hotelImg}}" alt="">
         <p class="homebanner-name">{{hotelData[1].hotelName}}</p>
         <p class="homebanner-desc">{{hotelData[1].hotelDescription}}</p>
