--- a/src/app/pages/hotels/hotels.component.html
+++ b/src/app/pages/hotels/hotels.component.html
@@ -1,1 +1,55 @@
-<p>hotels works!</p>
+<div class="hotels-container">
+
+  <div class="hotel_card">
+    <div class="hotel_card_img">
+    <img src="{{hotelData[0].hotelImg}}">
+  </div>
+  <div class="hotel_card_text">
+    <div class="hotel_name">{{hotelData[0].hotelName}}</div>
+    <div class="hotel_desc">{{hotelData[0].hotelDescription}}</div>
+  </div>
+  <button>Preskúmať</button>
+
+  </div>
+
+  <div class="hotel_card">
+    <div class="hotel_card_img">
+      <img src="{{hotelData[1].hotelImg}}">
+    </div>
+    <div class="hotel_card_text">
+      <div class="hotel_name">{{hotelData[1].hotelName}}</div>
+      <div class="hotel_desc">{{hotelData[1].hotelDescription}}</div>
+    </div>
+    <button>Preskúmať</button>
+  </div>
+
+  <div class="hotel_card">
+    <div class="hotel_card_img">
+    <img src="{{hotelData[2].hotelImg}}">
+  </div>
+  <div class="hotel_card_text">
+    <div class="hotel_name">{{hotelData[2].hotelName}}</div>
+    <div class="hotel_desc">{{hotelData[2].hotelDescription}}</div>
+  </div>
+  <button>Preskúmať</button>
+  </div>
+
+  <div class="hotel_card">
+    <div class="hotel_card_img">
+    <img src="{{hotelData[3].hotelImg}}">
+  </div>
+  <div class="hotel_card_text">
+    <div class="hotel_name">{{hotelData[3].hotelName}}</div>
+    <div class="hotel_desc">{{hotelData[3].hotelDescription}}</div>
+  </div>
+  <button>Preskúmať</button>
+  </div>
+
+
+
+
+
+
+
+
+  </div>
