--- a/src/app/pages/hotels/hotels.component.html
+++ b/src/app/pages/hotels/hotels.component.html
@@ -8,7 +8,9 @@
     <div class="hotel_name">{{hotelData[0].hotelName}}</div>
     <div class="hotel_desc">{{hotelData[0].hotelDescription}}</div>
   </div>
-  <button>Preskúmať</button>
+  <a href="">
+    <button>Preskúmať</button>
+  </a>
 
   </div>
 
@@ -20,7 +22,9 @@
       <div class="hotel_name">{{hotelData[1].hotelName}}</div>
       <div class="hotel_desc">{{hotelData[1].hotelDescription}}</div>
     </div>
-    <button>Preskúmať</button>
+    <a href="">
+      <button>Preskúmať</button>
+    </a>
   </div>
 
   <div class="hotel_card">
@@ -31,7 +35,9 @@
     <div class="hotel_name">{{hotelData[2].hotelName}}</div>
     <div class="hotel_desc">{{hotelData[2].hotelDescription}}</div>
   </div>
-  <button>Preskúmať</button>
+  <a href="">
+    <button>Preskúmať</button>
+  </a>
   </div>
 
   <div class="hotel_card">
@@ -42,8 +48,10 @@
     <div class="hotel_name">{{hotelData[3].hotelName}}</div>
     <div class="hotel_desc">{{hotelData[3].hotelDescription}}</div>
   </div>
+  <a href="">
   <button>Preskúmať</button>
-  </div>
+</a>
+</div>
 
 
 
